# ping

./: .gitignore  README.md  pyproject.toml  step0.md  step1_数据模块.md  step2_策略模块.md  step3_回测模块.md  step4_风控模块.md
data/catalog/: datasets.example.json
data/raw/: sample_bars_multi.csv  sample_bars_single.csv
docs/: architecture_overview.md  backtest_module.md  data_module.md  execution_module.md  risk_module.md  strategy_module.md
docs/strategies/cross_sectional_momentum/: README.md
docs/strategies/dual_moving_average/: README.md
examples/: download_ashare_parquet.py  load_multi_symbols.py  load_single_symbol.py  run_backtest_ashare_demo.py  run_backtest_demo.py  run_backtest_with_risk_demo.py  run_cross_sectional_momentum.py  run_dual_moving_average.py  run_execution_demo.py  show_strategy_outputs.py
src/quant_system/: __init__.py
src/quant_system/backtest/: __init__.py  api.py  broker.py  config.py  engine.py  exceptions.py  exporters.py  ledger.py  metrics.py  models.py  order_sizer.py  visualizers.py
tests/: conftest.py
tests/backtest/: test_api_e2e.py  test_ashare_backtest_integration.py  test_broker.py  test_engine.py  test_ledger.py  test_metrics.py  test_visualizers.py
tests/data/: test_ashare_downloader.py  test_ashare_provider.py  test_catalog_calendar.py  test_local_file_provider.py  test_validator.py
tests/execution/: __init__.py  test_engine.py  test_matching.py
tests/risk/: test_engine.py  test_rules.py
tests/strategy/: test_cross_sectional_momentum.py  test_dual_moving_average.py  test_strategy_runner.py
(+39 files in other folders)
